template.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.16.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: nat_gateway_demo_vpc
    Metadata:
      aws:cdk:path: NatGatewayStack/Vpc/Resource
  PublicSubnet2F070567:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.16.96.0/20
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: NatGatewayStack/PublicSubnet/PublicSubnet
    Metadata:
      aws:cdk:path: NatGatewayStack/PublicSubnet/PublicSubnet/Subnet
  PrivateSubnet70527EEF:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.16.32.0/20
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: NatGatewayStack/PrivateSubnet/PrivateSubnet
    Metadata:
      aws:cdk:path: NatGatewayStack/PrivateSubnet/PrivateSubnet/Subnet
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: nat_gateway_demo_igw
    Metadata:
      aws:cdk:path: NatGatewayStack/IGW
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Fn::GetAtt:
          - IGW
          - InternetGatewayId
    Metadata:
      aws:cdk:path: NatGatewayStack/IGWAttach
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: nat_gateway_demo_eip
    Metadata:
      aws:cdk:path: NatGatewayStack/EIP
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: PublicSubnet2F070567
      AllocationId:
        Fn::GetAtt:
          - EIP
          - AllocationId
      Tags:
        - Key: Name
          Value: nat_gateway_demo_ngw
    Metadata:
      aws:cdk:path: NatGatewayStack/NatGateway
  PrivateSubnetARouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: nat_gateway_demo_private_subnet_route_table
    Metadata:
      aws:cdk:path: NatGatewayStack/PrivateSubnetARouteTable
  PrivateSubnetRouteTableRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Fn::GetAtt:
          - PrivateSubnetARouteTable
          - RouteTableId
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::GetAtt:
          - NatGateway
          - NatGatewayId
    Metadata:
      aws:cdk:path: NatGatewayStack/PrivateSubnetRouteTableRoute
  PrivateSubnetRTAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Fn::GetAtt:
          - PrivateSubnetARouteTable
          - RouteTableId
      SubnetId:
        Ref: PrivateSubnet70527EEF
    Metadata:
      aws:cdk:path: NatGatewayStack/PrivateSubnetRTAssoc
  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: nat_gateway_demo_public_subnet_route_table
    Metadata:
      aws:cdk:path: NatGatewayStack/PublicSubnetRouteTable
  PublicSubnetRouteTableRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Fn::GetAtt:
          - PublicSubnetRouteTable
          - RouteTableId
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Fn::GetAtt:
          - IGW
          - InternetGatewayId
    DependsOn:
      - IGWAttach
    Metadata:
      aws:cdk:path: NatGatewayStack/PublicSubnetRouteTableRoute
  PublicSubnetRTAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Fn::GetAtt:
          - PublicSubnetRouteTable
          - RouteTableId
      SubnetId:
        Ref: PublicSubnet2F070567
    Metadata:
      aws:cdk:path: NatGatewayStack/PublicSubnetRTAssoc
  EC2RoleF978FC1C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Path: /
      Policies:
        - PolicyDocument:
            Statement:
              - Action:
                  - ec2messages:AcknowledgeMessage
                  - ec2messages:DeleteMessage
                  - ec2messages:FailMessage
                  - ec2messages:GetEndpoint
                  - ec2messages:GetMessages
                  - ec2messages:SendReply
                  - s3:*
                  - sns:*
                  - ssm:DescribeAssociation
                  - ssm:DescribeDocument
                  - ssm:GetDeployablePatchSnapshotForInstance
                  - ssm:GetDocument
                  - ssm:GetManifest
                  - ssm:GetParameter
                  - ssm:GetParameters
                  - ssm:ListAssociations
                  - ssm:ListInstanceAssociations
                  - ssm:PutComplianceItems
                  - ssm:PutConfigurePackageResult
                  - ssm:PutInventory
                  - ssm:UpdateAssociationStatus
                  - ssm:UpdateInstanceAssociationStatus
                  - ssm:UpdateInstanceInformation
                  - ssmmessages:CreateControlChannel
                  - ssmmessages:CreateDataChannel
                  - ssmmessages:OpenControlChannel
                  - ssmmessages:OpenDataChannel
                Effect: Allow
                Resource: "*"
            Version: "2012-10-17"
          PolicyName: root
      RoleName: nat-gateway-demo-ec2-iam-role
    Metadata:
      aws:cdk:path: NatGatewayStack/EC2Role/Resource
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: EC2RoleF978FC1C
      Path: /
    Metadata:
      aws:cdk:path: NatGatewayStack/EC2InstanceProfile
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS private network default security group
      GroupName: nat-gateway-demo-ec2-sg
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow SSH IPv4 IN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: NatGatewayStack/EC2SecurityGroup
  EC2:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile:
        Ref: EC2InstanceProfile
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - EC2SecurityGroup
            - GroupId
      SubnetId:
        Ref: PrivateSubnet70527EEF
      Tags:
        - Key: Name
          Value: nat-gateway-demo-ec2
    Metadata:
      aws:cdk:path: NatGatewayStack/EC2
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/02PTwvCMAzFP4v3rv5DwaOIDC9SNvEqWY0Y3VppU8YY++7ObTpPL6+/l6RZyPVKziZQ+khfn1FOmaxTBv0U7dOlRr2Q9fmlxe5mzmon0pAZ5I8bq4NhdG0dA2MJ1RAd3JbbYfcCTRfdH9RHjvAfTmxgPEGW48+NC0a49d5qAiZrOow6OOIqdja8+m94BqOxEQSFrBP7ndfrFytnb5Rj04gEvQ1Od1SBgwLbO7qWATRCVXy3ZrqU85ncTB6eKHLBMBUok17fvgf9Y0ABAAA=
    Metadata:
      aws:cdk:path: NatGatewayStack/CDKMetadata/Default
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
